# evalutionbot

./: Makefile  main.py  pyproject.toml  requirements.txt
core/: content.py  keyboards.py  main_route.py
core/routes/: converting.py
tools/: bot.py  converting.py  utils.py
